--- a/index.ipynb
+++ b/index.ipynb
@@ -469,12 +469,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    list(filter(restaurants['is_closed'] == Fa))"
+    "    list(filter(restaurants['is_closed'] == False, restaurants))"
    ]
   },
   {
