Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -474,7 +474,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambdarestaurants['is_closed'] == False, restaurants))"
+    "    return list(filter(lambda restaurantsrestaurants['is_closed'] == False, restaurants))"
    ]
   },
   {
