--- a/index.ipynb
+++ b/index.ipynb
@@ -549,7 +549,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    list(filter(lambda restaurant: resaurant))"
+    "    list(filter(lambda restaurant: restaurant))"
    ]
   },
   {
