--- a/index.ipynb
+++ b/index.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,38 +170,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610},\n",
+       "[{'name': 'Fork & Fig',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 610},\n",
        " {'name': 'Salt And Board',\n",
-       "  'price': 2,\n",
+       "  'price': '$$',\n",
        "  'is_closed': False,\n",
        "  'review_count': 11},\n",
        " {'name': 'Frontier Restaurant',\n",
-       "  'price': 1,\n",
+       "  'price': '$',\n",
        "  'is_closed': False,\n",
        "  'review_count': 1373},\n",
        " {'name': 'Nexus Brewery',\n",
-       "  'price': 2,\n",
+       "  'price': '$$',\n",
        "  'is_closed': False,\n",
        "  'review_count': 680},\n",
        " {'name': \"Devon's Pop Smoke\",\n",
-       "  'price': 2,\n",
+       "  'price': '$$',\n",
        "  'is_closed': False,\n",
        "  'review_count': 54},\n",
-       " {'name': 'Cocina Azul', 'price': 2, 'is_closed': True, 'review_count': 647},\n",
-       " {'name': 'Philly Steaks', 'price': 2, 'is_closed': False, 'review_count': 25},\n",
+       " {'name': 'Cocina Azul',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': True,\n",
+       "  'review_count': 647},\n",
+       " {'name': 'Philly Steaks',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 25},\n",
        " {'name': 'Stripes Biscuit',\n",
-       "  'price': 2,\n",
+       "  'price': '$$',\n",
        "  'is_closed': True,\n",
        "  'review_count': 20}]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,38 +375,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610},\n",
+       "[{'name': 'Fork & Fig',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 610},\n",
        " {'name': 'Salt And Board',\n",
-       "  'price': 2,\n",
+       "  'price': '$$',\n",
        "  'is_closed': False,\n",
        "  'review_count': 11},\n",
        " {'name': 'Frontier Restaurant',\n",
-       "  'price': 1,\n",
+       "  'price': '$',\n",
        "  'is_closed': False,\n",
        "  'review_count': 1373},\n",
        " {'name': 'Nexus Brewery',\n",
-       "  'price': 2,\n",
+       "  'price': '$$',\n",
        "  'is_closed': False,\n",
        "  'review_count': 680},\n",
        " {'name': \"Devon's Pop Smoke\",\n",
-       "  'price': 2,\n",
+       "  'price': '$$',\n",
        "  'is_closed': False,\n",
        "  'review_count': 54},\n",
-       " {'name': 'Cocina Azul', 'price': 2, 'is_closed': True, 'review_count': 647},\n",
-       " {'name': 'Philly Steaks', 'price': 2, 'is_closed': False, 'review_count': 25},\n",
+       " {'name': 'Cocina Azul',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': True,\n",
+       "  'review_count': 647},\n",
+       " {'name': 'Philly Steaks',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 25},\n",
        " {'name': 'Stripes Biscuit',\n",
-       "  'price': 2,\n",
+       "  'price': '$$',\n",
        "  'is_closed': True,\n",
        "  'review_count': 20}]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
