Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -695,17 +695,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
+   "source": [
+    "restaurant"
+   ]
   },
   {
    "cell_type": "markdown",
